# ska-dlm-client

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .release  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  Makefile  README-OPENAPI.md  README.md  config.yaml  create_flow.py  extract_data.sh  pyproject.toml
.dlm/: config.yaml
charts/dlm-integ-env/: Chart.yaml  README.md  values.yaml
charts/dlm-integ-env/templates/: pvcs.yaml  ssh-keys-secrets.yaml
charts/ska-dlm-client/: Chart.yaml  README.md  values.yaml
charts/ska-dlm-client/charts/: kafka-23.0.1.tgz
charts/ska-dlm-client/templates/: _helper-readiness-probe.tpl  _helper-ssh-sa-deployment.tpl  _helper-ssh-sa-service.tpl  _helpers.tpl  configdb-watcher-deployment.yaml  directory-watcher-deployment.yaml  directory-watcher.yaml  dlm-configmap.yaml  etcd.yaml  integration-verification-job.yaml  kafka-watcher-deployment.yaml  kafka-watcher.yaml  register-storage-location-job.yaml  setup-storage-location-job.yaml  ssh-storage-access-daq.yaml  ssh-storage-access-pst.yaml  ssh-storage-access-sdp.yaml  ssh-storage-access.yaml  startup-verification-deployment.yaml  startup-verification-job.yaml
data/: .gitattributes  pb-test-20260126-24294.tar.bz2
docs/openapi/: GatewayApi.md  HTTPValidationError.md  RequestApi.md  StorageApi.md  ValidationError.md
docs/src/: README.md  conf.py  index.rst  openapi_readme.md  openapi_readme.rst
docs/src/api/: configdb_watcher.rst  directory_watcher.rst  index.rst  kafka_watcher.rst  package.rst  register_storage_location.rst  registration_processor.rst  ska_dlm_client.rst  startup_verification.rst
docs/src/deployment/: index.rst
docs/src/openapi_client_dlm/: GatewayApi.md  HTTPValidationError.md  IngestApi.md  MigrationApi.md  RequestApi.md  StorageApi.md  ValidationError.md  ValidationErrorLocInner.md  index.rst
docs/src/openapi_dlm_client/: GatewayApi.md  IngestApi.md  MigrationApi.md  RequestApi.md  StorageApi.md  ValidationErrorLocInner.md
docs/src/testing/: index.rst
openapi_client_dlm_specs/: 8000.json  8001.json  8002.json  8003.json  8004.json  README.md  api_client.patch  diff.sh  edit_tags.sh  generate_code.sh  generate_openapi_specs.py
openapi_client_dlm_specs/openapi_client_dlm_project/: .gitlab-ci.yml  .travis.yml  README.md.bak  pyproject.toml  setup.py  tox.ini
openapi_client_dlm_specs/specs/: 8000.json  8004.json  _merged_spec.json  gateway_spec.json  ingest_spec.json  migration_spec.json  request_spec.json  storage_spec.json
resources/: ci-dev-values.yaml  dev-values.yaml  dp-proj-user.yaml  generate_dev_test_keys.sh  int-ver-values.yaml  integration-dp.yaml  local-values.yaml  manage_keys_for_testing.sh  minikube-pv.yaml  minikube-pvc.yaml  psi-low-no-dlm.yaml  sample-deployment.yaml  ska-south.yaml
resources/pi26-4-demo/: mboulton-values.yaml  pseudo-pst-writer.yaml  run-info  setup-postgresql-values.yaml
src/openapi_client_dlm/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/ska_dlm_client/: __init__.py  api_interactions.py  cli.py  common_types.py  config.py  config.yaml  configdb_watcher.py  data_product_metadata.py  exception_handling_typer.py  kafka_watcher.py  minimal_metadata_generator.py  registration_processor.py  ska_dlm_client.py  typer_types.py  typer_utils.py  utils.py
src/ska_dlm_client/openapi/: README.md  (+6 more)
tests/: Dockerfile-client-testrunner  Dockerfile-dlm-compose  Dockerfile-dlm_directory_watcher  __init__.py  configdb_entrypoint.sh  configdb_watcher.env  directory_watcher.env  directory_watcher2.env  dlm_clients.docker-compose.yaml  dlm_configdb_watcher.docker-compose.yaml  dlm_directory_watcher.docker-compose.yaml  dlm_test_setup.sh  entrypoint.sh  services.docker-compose.yaml  test-services.docker-compose.yml  test_services.docker-compose.yaml  testrunner.docker-compose.yaml
tests/configdb_watcher/: conftest.py  test_configdb_utils.py  test_configdb_watcher.py
tests/directory_watcher/: __init__.py  test_data_product_metadata.py  test_directory_to_watch.py  test_directory_utils.py  test_directory_watcher.py  test_metadata.py  test_registration_processor.py  test_source_root.py  test_storage_root_directory.py  test_utils.py
tests/dlm_client/: __init__.py  test_ska_dlm_client.py  test_utils.py
tests/integration/: Dockerfile-client-testrunner  Dockerfile-db  Dockerfile-gateway  Dockerfile-keycloak  Dockerfile-rclone  Dockerfile-servers  __init__.py  conftest.py  dlm_servers.docker-compose.yaml  dlm_services.docker-compose.yaml  docker-compose.override.yaml  populate_data_for_directory_watcher.py  realm-export.json  test_configdb_watcher.py  test_directory_watcher.py  test_kafka.py  test_sdp_ingest.py  testrunner.docker-compose.yaml
tests/kafka_watcher/: test_kafka_base_dir.py  test_kafka_watcher.py
tests/openapi/: test_gateway_api.py  test_http_validation_error.py  test_ingest_api.py  test_migration_api.py  test_request_api.py  test_storage_api.py  test_validation_error.py  test_validation_error_loc_inner.py
tests/openapi_client_dlm/: test_gateway_api.py  test_http_validation_error.py  test_ingest_api.py  test_migration_api.py  test_request_api.py  test_storage_api.py  test_validation_error.py  test_validation_error_loc_inner.py
tests/resources/: dp-proj-user.yaml
tests/test_registration_processor/: test_registration_processor.py
tests/unit/: conftest.py  test_configdb_utils.py  test_configdb_watcher.py  test_kafka.py  test_kafka_watcher.py  test_ska_dlm_client.py  test_utils.py
(+105 files in other folders)
