[tool.poetry]
name = "ska-dlm-client"
version = "0.0.1"
description = "Client(s) for the SKA Data Lifecycle Manager"
authors = ["Mark Boulton <mark.boulton@uwa.edu.au>"]
license= "BSD-3-Clause"
readme = "README.md"

[[tool.poetry.source]]
name = 'skao'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.12.0"
pylint = "^3.2.7"
pylint-junit = "^0.3.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
flake8-pyproject = "^1.2.3"
[tool.poetry.group.docs.dependencies]
sphinx = ">=7.2.0"
ska-ser-sphinx-theme = ">=0.1.1"
sphinx-autodoc-typehints = ">=1.23.0"

[tool.pytest.ini_options]
addopts = "-v"

[tool.flake8]
docstring-style = "sphinx"
rst-directives = "literalinclude"
rst-roles = ["py:attr", "py:class", "py:const", "py:exc", "py:func", "py:meth", "py:mod"]
enable = "DAR104"
max-complexity = 10

# E203 and W503 conflict with black
ignore = ["E203", "W503"]

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "fixme",
]
enable = ["useless-suppression"]

[tool.pylint.similarities]
min-similarity-lines = 7
ignore-imports = "yes"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
